--- a/style.css
+++ b/style.css
@@ -12,6 +12,37 @@ html {
     
 }
 
+#exTab1 .tab-content {
+	color : white;
+	background-color: #428bca;
+	padding : 5px 15px;
+  }
+  
+  #exTab2 h3 {
+	color : white;
+	background-color: #428bca;
+	padding : 5px 15px;
+  }
+  
+  /* remove border radius for the tab */
+  
+  #exTab1 .nav-pills > li > a {
+	border-radius: 0;
+  }
+  
+  /* change border radius for the tab , apply corners on top*/
+  
+  #exTab3 .nav-pills > li > a {
+	border-radius: 4px 4px 0 0 ;
+  }
+  
+  #exTab3 .tab-content {
+	color : white;
+	background-color: #428bca;
+	padding : 5px 15px;
+  }
+  
+
 a.nav-link.active span {
     background: #1A76D1;
     color: #fff !important;
@@ -24,10 +55,10 @@ a.nav-link.active span {
 
 .tab-content>.active {
     padding: 4%;
-    border: 4px solid #1a76d1;
-    box-shadow: 5px 5px 20px rgb(0 0 0 / 20%);
-    -webkit-box-shadow: 5px 5px 20px rgb(0 0 0 / 20%);
-    -moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+    background: #f6f6f6;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.075);
+    -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.075);
+    -moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.075);
 }
 
 .departments .department-tab .nav li {
@@ -40,9 +71,9 @@ a.nav-link.active span {
 
 .departments .department-tab .nav li:hover {
     
-    box-shadow: 5px 5px 31px rgba(0, 0, 0, 0.3)  ; 
-	-webkit-box-shadow: 5px 5px 31px rgba(0, 0, 0, 0.3)  ; 
-	-moz-box-shadow: 5px 5px 31px rgba(0, 0, 0, 0.3)  ; 
+    box-shadow: 5px 5px 31px rgba(0, 0, 0, 0.075)  ; 
+	-webkit-box-shadow: 5px 5px 31px rgba(0, 0, 0, 0.075)  ; 
+	-moz-box-shadow: 5px 5px 31px rgba(0, 0, 0, 0.075)  ; 
 
 }
 
@@ -51,11 +82,24 @@ a.nav-link.active span {
 } */
 
 .slider .single-slider {
-    height: 475px !important;
+    height: 380px !important;
 }
 
 .pagination{
     display: flex;
+}
+
+.nav-pills .nav-link, .nav-pills .show>.nav-link {
+    text-align: center;
+	background-color: #fff;
+
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #000;
+    background-color: #f6f6f6;
+    box-shadow: 0px -10px 20px rgb(0 0 0 / 10%);
+    -webkit-box-shadow: 0px -10px 20px rgb(0 0 0 / 10%);
+    -moz-box-shadow: 0px -10px 20px rgb(0 0 0 / 10%);
 }
 
 body{
@@ -2656,7 +2700,7 @@ body{
 	Start Appointment CSS
 ============================*/
 .appointment{
-	background:#fff;
+	background:#f6f6f6;
 	padding-top:100px;
 }
 .appointment.single-page {
